# ARM-FWT-Utils

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh
data-dir/: mul_out.hdf
inc-dir/: arm_dwt_f32.h  arm_fwt_f32.h  arm_mal_f32.h  arm_wt_common.h  arm_wt_f32.h  arm_wt_q15.h  fwt_mallat.h  hdf_helper.h  mat_helper.h
octave-dir/: fwt_fir_dec.m  fwt_malat.m  fwt_mallat.m  gen_firtest.m  gen_fwtmat.m  gen_mallat.m  gen_multest.m  test_coefs.m  test_fir.m
src-dir/: arm_dwt_f32.c  arm_fwt_f32.c  arm_mal_f32.c  arm_wt_f32.c  arm_wt_q15.c  fwt_gen_b.m  fwt_mallat.c  gen_firtest.m  gen_fwtmat.m  hdf_helper.c  mat_helper.c  save_matrix.m
test-dir/: armcwt.c  armdwt.c  armfwt.c  armqwt.c  base.c  coefs.c  compare.c  load.c  mallat.c  matmul.c
